--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dev": "concurrently \"npm run backend\" \"npm run start\""
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
     "@expo/metro-runtime": "~6.1.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "~54.0.0",
     "expo-asset": "~12.0.9",
     "expo-av": "~16.0.7",
@@ -26,6 +28,8 @@
     "expo-speech": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "lottie-react-native": "~7.3.1",
+    "lucide-react": "^0.544.0",
+    "lucide-react-native": "^0.544.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
@@ -35,6 +39,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.21.0"
   },
