--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "backend": "cd backend && npm run dev",
     "dev": "concurrently \"npm run backend\" \"npm run start\""
@@ -21,6 +21,7 @@
     "expo": "~54.0.0",
     "expo-asset": "~12.0.9",
     "expo-av": "~16.0.7",
+    "expo-dev-client": "~6.0.12",
     "expo-file-system": "~19.0.15",
     "expo-font": "~14.0.8",
     "expo-linear-gradient": "~15.0.7",
@@ -33,6 +34,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-adapty": "3.11.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.12.0",
