--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "dream-visualizer-backend",
   "version": "1.0.0",
   "description": "Backend API for Dream Visualizer",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "node --watch index.js",
@@ -10,20 +11,29 @@
     "test": "echo 'Tests not implemented yet'"
   },
   "dependencies": {
-    "hono": "^4.0.0",
+    "@fal-ai/client": "^1.6.2",
+    "@fal-ai/serverless-client": "^0.15.0",
     "@hono/node-server": "^1.19.4",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "drizzle-orm": "^0.29.0",
-    "postgres": "^3.4.3",
+    "express": "^4.21.2",
+    "hono": "^4.0.0",
+    "multer": "^2.0.2",
     "openai": "^4.20.0",
-    "axios": "^1.6.0"
+    "postgres": "^3.4.3"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "drizzle-kit": "^0.20.0"
   },
-  "keywords": ["dream", "visualization", "ai", "api"],
+  "keywords": [
+    "dream",
+    "visualization",
+    "ai",
+    "api"
+  ],
   "author": "Dream Visualizer Team",
   "license": "MIT"
 }
