--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/metro-runtime": "~6.1.2",
+    "@fal-ai/server-proxy": "^1.1.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.12.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.0",
     "expo-asset": "~12.0.9",
     "expo-av": "~16.0.7",
@@ -28,14 +32,15 @@
     "expo-sharing": "~14.0.7",
     "expo-speech": "~14.0.7",
     "expo-status-bar": "~3.0.8",
+    "express": "^4.21.2",
     "firebase": "^12.3.0",
     "lottie-react-native": "~7.3.1",
     "lucide-react": "^0.544.0",
     "lucide-react-native": "^0.544.0",
+    "multer": "^2.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-adapty": "3.11.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.12.0",
@@ -48,7 +53,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
