--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-status-bar": "~3.0.8",
     "express": "^4.21.2",
     "firebase": "^12.3.0",
+    "groq-sdk": "^0.33.0",
     "lottie-react-native": "~7.3.1",
     "lucide-react": "^0.544.0",
     "lucide-react-native": "^0.544.0",
