Adapty SDK eklendi,yeni onboarding, .env hariç

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,10 @@
 pluginManagement {
+  repositories {
+    google()
+    mavenCentral()
+    gradlePluginPortal()
+    maven { url 'https://maven.adapty.io' }
+  }
   def reactNativeGradlePlugin = new File(
     providers.exec {
       workingDir(rootDir)
@@ -31,7 +37,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
 }
 expoAutolinking.useExpoModules()
 
-rootProject.name = 'DreamVisualizer'
+rootProject.name = 'Dream Visualizer'
 
 expoAutolinking.useExpoVersionCatalog()
 
