--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,7 @@ buildscript {
   repositories {
     google()
     mavenCentral()
+    maven { url 'https://maven.adapty.io' }
   }
   dependencies {
     classpath('com.android.tools.build:gradle')
@@ -17,6 +18,7 @@ allprojects {
     google()
     mavenCentral()
     maven { url 'https://www.jitpack.io' }
+    maven { url 'https://maven.adapty.io' }
   }
 }
 
