--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dev": "concurrently \"npm run backend\" \"npm run start\""
   },
   "dependencies": {
+    "@adapty/react-native-ui": "1.0.3",
     "@expo-google-fonts/inter": "^0.4.2",
+    "@expo-google-fonts/montserrat": "0.4.2",
     "@expo/metro-runtime": "~6.1.2",
     "@fal-ai/server-proxy": "^1.1.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -25,13 +27,14 @@
     "expo": "~54.0.0",
     "expo-asset": "~12.0.9",
     "expo-av": "~16.0.7",
-    "expo-dev-client": "~6.0.12",
+    "expo-dev-client": "~6.0.13",
     "expo-file-system": "~19.0.15",
     "expo-font": "~14.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-speech": "~14.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
     "express": "^4.21.2",
     "firebase": "^12.3.0",
     "groq-sdk": "^0.33.0",
@@ -42,6 +45,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-adapty": "2.4.7",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.12.0",
@@ -50,10 +54,13 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.6.0",
+    "tslib": "^2.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^20.0.2",
     "concurrently": "^8.2.2",
     "typescript": "~5.9.2"
   },
